--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -47,6 +47,7 @@
     {{ 'min-maxify.css' | asset_url | stylesheet_tag }}
     {{ 'blog.css' | asset_url | stylesheet_tag }}
     {{ 'single-blog.css' | asset_url | stylesheet_tag }}
+    
     <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
 
     <!-- Snap Pixel Code -->
@@ -65,7 +66,7 @@ snaptr('track', 'PAGE_VIEW');
 <!-- End Snap Pixel Code -->
   </head>
 
-  <body class="temp-{{template.name}}">
+  <body class="temp-{{template.name}} template-{{template.suffix}}">
 
     {% section 'header' %}
     
@@ -94,6 +95,7 @@ snaptr('track', 'PAGE_VIEW');
     {{ 'scripts.js' | asset_url | script_tag }}
     {{ 'main.js' | asset_url | script_tag }}
     {{ 'custom.js' | asset_url | script_tag }}
+    {{ 'black-friday.css' | asset_url | stylesheet_tag }}
     {% comment %} <script type="text/javascript" src="assets/js/jquery-3.7.1.min.js"></script> {% endcomment %}
     <!-- <script type="text/javascript" src="assets/js/lenis.min.js"></script> -->
     
