--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -5,52 +5,76 @@ assign button_label = button_details.button_label
 %}
 <div class="flex flex-col product-item swiper-slide">
    
-                    <a href="{{ product.url }}" class="pos-relative br-10x flex flex-bottom-align product-item-container">
-                    <div class="flex-box badge-wrapper">
-                        {% for item in product.metafields.custom.badge.value  limit: 2%}
-                        <div class="badge">
-                            {{ item.text |  metafield_tag |  replace: '<p>', '<div>' |  replace: '</p>', '</div>' |  replace: '<em>', '<span class="unit">' |  replace: '</em>', '</span>' }}
-                        </div>
-                        
-                        {% endfor %} 
-                        
-                    </div>
-                    
-                    <div class="pos-absolute bg-visual product-img">
-                        <figure>
-                        {% render 'responsive-image', image: product.featured_image, image_class: 'bg-img' %}
-                        </figure>
-                    </div>
-                    </a>
+    <a href="{{ product.url }}" class="pos-relative br-10x flex flex-bottom-align product-item-container">
     
-            {% assign currrent_variant = product.selected_or_first_available_variant %}
-                     <div class="padding-top-m card-content">
-                            <div class="flex flex-col card-footer">
-                                <h5>{{ product.title }}</h5>
-                                {{ product.metafields.custom.description |  metafield_tag }}
-                                {% form 'product', product, class: 'shopify-product-form' %}
-                                    {% comment %} <input type="hidden" name="id" value="{{ product.selected_or_first_available_variant.id }}"> 
-                                     {% endcomment %}
-                                        <div class="flex-box flex-col lg:flex-row lg:flex-no flex-space-between btn-wrap ">
-                                                <div class="dropdown product_options">
-                                                    <select class="cart__product-select" name="id">
-                                                    {% for variant in product.variants %}
-                                                        <option data-quantity-available="{{ variant.available }}" 
-                                                        data-quantity-price="{{ variant.price |  money }}"  
-                                                        value="{{ variant.id }}"
-                                                    {% if currrent_variant.id == variant.id %}selected="selected"{% endif %}>{{ variant.title }}</option>                                                        
-                                                    {% endfor %}
-                                                    </select>
-                                                </div>
-                                                <div class="button cart__btn button--stroke btn btn-secondary btn-medium flex flex-x-align flex-y-align margin-top-default-sml lg:margin-top-none showCart add__card-product" data-block="button">
-                                                    <span class="button__flair"></span>
-                                                    <span class="button__label">
-                                                    <span class="btn-txt" data-btn-text="{% if product.available %}{% if button_details != blank and enable_button_variation == true %}{{button_label}}{% else %}Add to Cart{% endif %}{% else %}SOLD OUT {% endif %}">{% if product.available %}{% if enable_button_variation == true and button_label != blank %}{{ button_label }}{% else %}Add to Cart{% endif %}{% else %}SOLD OUT{% endif %}</span>&nbsp;-&nbsp;<span class="btn-display-price card__product-price">{{ currrent_variant.price | money }}</span>{% if currrent_variant.compare_at_price != blank and currrent_variant.compare_at_price > currrent_variant.price %}<span class="line-through">{{ currrent_variant.compare_at_price | money }}</span>{% endif %}
-                                                    </span>
-                                                </div>
-                                        </div>
-                                    {% endform %}  
-                            </div>
-                     </div>
+    <div class="new-badges">
+        {%- if product.compare_at_price_max > product.price -%}
+        <div class="product-item__badge product-item__badge_color-black">
+        SAVE
+        {{
+            product.compare_at_price_max
+            | minus: product.price
+            | times: 100
+            | divided_by: product.compare_at_price_max
+            | round
+        }}%
+        </div>
+    {%- endif -%}
+    
+    {%- if product.metafields.custom.top_badges and product.metafields.custom.top_badges.value != blank -%}
+        {%- for badge_text in product.metafields.custom.top_badges.value -%}
+        <div class="product-item__badge product-item__badge_color-white">
+            {{ badge_text }}
+        </div>
+        {%- endfor -%}
+    {%- endif -%}
+    </div>
+    
+    <div class="flex-box badge-wrapper">
+        {% for item in product.metafields.custom.badge.value  limit: 2%}
+        <div class="badge">
+            {{ item.text |  metafield_tag |  replace: '<p>', '<div>' |  replace: '</p>', '</div>' |  replace: '<em>', '<span class="unit">' |  replace: '</em>', '</span>' }}
+        </div>
+        
+        {% endfor %} 
+        
+    </div>
+
+    <div class="pos-absolute bg-visual product-img">
+        <figure>
+        {% render 'responsive-image', image: product.featured_image, image_class: 'bg-img' %}
+        </figure>
+    </div>
+    </a>
+
+    {% assign currrent_variant = product.selected_or_first_available_variant %}
+        <div class="padding-top-m card-content">
+            <div class="flex flex-col card-footer">
+                <h5>{{ product.title }}</h5>
+                {{ product.metafields.custom.description |  metafield_tag }}
+                {% form 'product', product, class: 'shopify-product-form' %}
+                    {% comment %} <input type="hidden" name="id" value="{{ product.selected_or_first_available_variant.id }}"> 
+                        {% endcomment %}
+                        <div class="flex-box flex-col lg:flex-row lg:flex-no flex-space-between btn-wrap ">
+                                <div class="dropdown product_options">
+                                    <select class="cart__product-select" name="id">
+                                    {% for variant in product.variants %}
+                                        <option data-quantity-available="{{ variant.available }}" 
+                                        data-quantity-price="{{ variant.price |  money }}"  
+                                        value="{{ variant.id }}"
+                                    {% if currrent_variant.id == variant.id %}selected="selected"{% endif %}>{{ variant.title }}</option>                                                        
+                                    {% endfor %}
+                                    </select>
+                                </div>
+                                <div class="button cart__btn button--stroke btn btn-secondary btn-medium flex flex-x-align flex-y-align margin-top-default-sml lg:margin-top-none showCart add__card-product" data-block="button">
+                                    <span class="button__flair"></span>
+                                    <span class="button__label">
+                                    <span class="btn-txt" data-btn-text="{% if product.available %}{% if button_details != blank and enable_button_variation == true %}{{button_label}}{% else %}Add to Cart{% endif %}{% else %}SOLD OUT {% endif %}">{% if product.available %}{% if enable_button_variation == true and button_label != blank %}{{ button_label }}{% else %}Add to Cart{% endif %}{% else %}SOLD OUT{% endif %}</span>&nbsp;-&nbsp;<span class="btn-display-price card__product-price">{{ currrent_variant.price | money }}</span>{% if currrent_variant.compare_at_price != blank and currrent_variant.compare_at_price > currrent_variant.price %}<span class="line-through">{{ currrent_variant.compare_at_price | money }}</span>{% endif %}
+                                    </span>
+                                </div>
+                        </div>
+                    {% endform %}  
+            </div>
+        </div>
                  
   </div>
