--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -148,32 +148,36 @@
                   <nav class="mobile-menu page-container mobi tablet">              
                     <ul class="flex flex-col">
                       {% for link in s.menu_mobi.links %}
-                        
+                        {% assign link_title_low = link.title | handleize %}
                         <li class="{% if link.links.size > 0 %}has-sub-menu-item{% endif %}"><a href="{{ link.url }}">
                           {% if link.title contains 'badge_' %}
                             {% assign link_title = link.title | split: 'badge_' %}
                             {{ link_title[0] | remove: 'megamenu' }}
                             <span class="upsell-text">{{ link_title[1] }}</span>
                           {% else %}
-                            {{ link.title }}
+                            {% if link_title_low contains 'black-friday' %}
+                                {{ link.title }} 🔥
+                                {% else %}
+                                  {{ link.title }}
+                              {% endif %}
                           {% endif %}
                          </a>                                    
-                                    {% if  link.links.size > 0 %}                                      
-                                      <ul class="sub-menu">
-                                        {% for child_link in link.links %}
-                                          <li><a href="{{ child_link.url }}">
-                                            {% if child_link.title contains 'badge_' %}
-                                              {% assign child_link_title = child_link.title | split: 'badge_' %}
-                                              {{ child_link_title[0] | remove: 'megamenu' }}
-                                              <span class="upsell-text">{{ child_link_title[1] }}</span>
-                                            {% else %}
-                                              {{ child_link.title }}
-                                            {% endif %}
-                                          </a></li>                                          
-                                        {% endfor %}
-                                      </ul>
-                                    {% endif %}
-                                </li>
+                              {% if  link.links.size > 0 %}                                      
+                                <ul class="sub-menu">
+                                  {% for child_link in link.links %}
+                                    <li><a href="{{ child_link.url }}">
+                                      {% if child_link.title contains 'badge_' %}
+                                        {% assign child_link_title = child_link.title | split: 'badge_' %}
+                                        {{ child_link_title[0] | remove: 'megamenu' }}
+                                        <span class="upsell-text">{{ child_link_title[1] }}</span>
+                                      {% else %}
+                                        {{ child_link.title }}
+                                      {% endif %}
+                                    </a></li>                                          
+                                  {% endfor %}
+                                </ul>
+                              {% endif %}
+                          </li>
                       {% endfor %}
                           </ul>
                   </nav>
