--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -30,7 +30,7 @@
                                 </div>  
 
                             {% if s.btn_label != blank %}
-                                <div class="fadeIn btn-wrap">
+                                <div class="fadeIn btn-wrap hero-btn-wrap">
                                     <a href="{{ s.btn_url }}" class="button button--stroke btn-primary btn-large btn" data-block="button">
                                         <span class="button__flair"></span>
                                         <span class="button__label">{{ s.btn_label }}</span>
