--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -110,18 +110,19 @@
                     <div class="grid-container lg:grid-container-three gutter product-item-wrapper">
                       {% for product in collection.products %}
                         {% assign grid_card = product.metafields.custom.grid_card.value %}
+                        {% assign cur_var = product.selected_or_first_available_variant %}
                         <div class="flex flex-col product-item">
                             <a href="{{ product.url }}" class="pos-relative br-10x flex flex-bottom-align product-item-container">
                             
                             <div class="new-badges">
-                                {%- if product.compare_at_price_max > product.price -%}
+                                {%- if cur_var.compare_at_price > cur_var.price -%}
                                 <div class="product-item__badge product-item__badge_color-black">
                                 SAVE
                                 {{
-                                    product.compare_at_price_max
-                                    | minus: product.price
+                                    cur_var.compare_at_price
+                                    | minus: cur_var.price
                                     | times: 100
-                                    | divided_by: product.compare_at_price_max
+                                    | divided_by: cur_var.compare_at_price
                                     | round
                                 }}%
                                 </div>
