--- a/sections/black-hero.liquid
+++ b/sections/black-hero.liquid
@@ -3,9 +3,7 @@
 
     assign s = section.settings
     assign background_color = s.background_color
-    assign text_color = s.text_color
-    assign button_color = s.button_color
-    assign button_text_color = s.button_text_color
+
     assign padding_desktop = s.padding_desktop
     assign padding_mobile = s.padding_mobile
     assign content_alignment = s.content_alignment | default: 'center'
@@ -14,25 +12,9 @@
   #section-{{ section.id }} {
     padding:{{ padding_desktop }};
     background-color: {{ background_color }};
-    color: {{ text_color }};
   }
   #section-{{ section.id }} .landing-hero__content {
     text-align: {{ content_alignment }};
-  }
-  #section-{{ section.id }} .landing-hero__btn a {
-    background-color: {{ button_color }};
-    color: {{ button_text_color }};
-  }
-  #section-{{ section.id }} .landing-hero__btn a:hover {
-    background-color: {{ button_color }};
-    color: {{ button_text_color }};
-  }
-  /* Block Styles */
-  #section-{{ section.id }} .hero-block {
-    margin-bottom: 1.5rem;
-  }
-  #section-{{ section.id }} .hero-block:last-child {
-    margin-bottom: 0;
   }
   #section-{{ section.id }} .hero-block__image {
     max-width: 100%;
@@ -51,24 +33,66 @@
   #section-{{ section.id }} .hero-block__text {
     line-height: 1.6;
   }
-  #section-{{ section.id }} .hero-block__text h1,
-  #section-{{ section.id }} .hero-block__text h2,
-  #section-{{ section.id }} .hero-block__text h3,
-  #section-{{ section.id }} .hero-block__text h4,
-  #section-{{ section.id }} .hero-block__text h5,
-  #section-{{ section.id }} .hero-block__text h6 {
-    margin-top: 0;
-    margin-bottom: 1rem;
-  }
-  #section-{{ section.id }} .hero-block__text p {
-    margin-bottom: 1rem;
-  }
-  #section-{{ section.id }} .hero-block__text p:last-child {
-    margin-bottom: 0;
-  }
   #section-{{ section.id }} .hero-block__button {
     display: inline-block;
   }
+
+  {% for block in section.blocks %}
+    {% case block.type %}
+      {% when 'countdown' %}
+        #{{ block.id }} {
+          padding: {{ block.settings.padding_desktop }};
+        }
+      {% when 'image' %}
+        {% assign position_type = block.settings.position_type %}
+        {% assign vertical_position = block.settings.vertical_position %}
+        {% assign vertical_position_value = block.settings.vertical_position_value %}
+        {% assign horizontal_position = block.settings.horizontal_position %}
+        {% assign horizontal_position_value = block.settings.horizontal_position_value %}
+        
+         #{{ block.id }} {
+          {% if position_type == 'absolute' %}
+            position: absolute;
+            z-index: -1;
+            {% if vertical_position != 'center' %}
+              {{vertical_position}}: {{ vertical_position_value }};
+              {% else %}
+                {{vertical_position}}: 50%;
+            {% endif %}
+            {% if horizontal_position != 'center' %}
+              {{horizontal_position}}: {{ horizontal_position_value }};
+            {% else %}
+              {{horizontal_position}}: 50%;
+            {% endif %}
+            {% if horizontal_position == 'center' and vertical_position == 'center' %}
+              transform: translate(-50%, -50%);
+            {% elsif horizontal_position == 'left' %}
+                transform: translateX(-50%);
+            {% elsif horizontal_position == 'right' %}
+                transform: translateX(50%);
+            {% elsif vertical_position == 'top' %}
+                transform: translateY(-50%);
+            {% elsif vertical_position == 'bottom' %}
+                transform: translateY(50%);
+            {% endif %}
+          {% endif %}
+          padding: {{ block.settings.padding_desktop }};
+        }
+      {% when 'text' %}
+         #{{ block.id }} {
+          padding: {{ block.settings.padding_desktop }};
+          color: {{ block.settings.text_color }};
+        }
+      {% when 'button' %}
+         #{{ block.id }} {
+          padding: {{ block.settings.padding_desktop }};
+        }
+        #{{ block.id }} a {
+          background-color: {{ block.settings.button_color }};
+          color: {{ block.settings.button_text_color }};
+        }
+    {% endcase %}
+  {% endfor %}
   @media (max-width: 767px) {
     #section-{{ section.id }} {
       padding: {{ padding_mobile }};
@@ -76,23 +100,39 @@
     #section-{{ section.id }} .hero-block {
       margin-bottom: 1rem;
     }
+
+    {% for block in section.blocks %}
+      {% case block.type %}
+        {% when 'countdown' %}
+           #{{ block.id }} {
+            padding: {{ block.settings.padding_mobile }};
+          }
+        {% when 'image' %}
+           #{{ block.id }} {
+            padding: {{ block.settings.padding_mobile }};
+          }
+        {% when 'text' %}
+           #{{ block.id }} {
+            padding: {{ block.settings.padding_mobile }};
+          }
+        {% when 'button' %}
+           #{{ block.id }} {
+            padding: {{ block.settings.padding_mobile }};
+          }
+      {% endcase %}
+    {% endfor %}
   }
 </style>
   <div class="landing-hero__inner" id="section-{{ section.id }}">
     <div class="landing-hero__wrapper">
       <div class="page-container common-wrap">
         <div class="landing-hero__content">
-          {% if section.settings.end_date != blank and section.settings.end_time != blank %}
-          <div class="landing-hero__times-wrap hero-block" data-end-date="{{ section.settings.end_date | escape }}" data-end-time="{{ section.settings.end_time | escape }}">
-            <img src="{{ 'clock.svg' | asset_url }}" alt="Countdown clock icon" loading="lazy">
-            <p>Ends in: <span class="countdown-text">02h 14m</span></p>
-          </div>
-          {% endif %}
+       
           
           {% for block in section.blocks %}
             {% case block.type %}
               {% when 'image' %}
-                <div class="hero-block hero-block__image-wrapper" {{ block.shopify_attributes }}>
+                <div id="{{ block.id }}" class="hero-block hero-block__image-wrapper" {{ block.shopify_attributes }}>
                   {% if block.settings.image != blank %}
                     {% assign image_alignment = block.settings.image_alignment | default: content_alignment %}
                     {% if block.settings.image_link != blank %}
@@ -111,15 +151,21 @@
                     {% endif %}
                   {% endif %}
                 </div>
-              
+              {% when 'countdown' %}
+                {% if section.settings.end_date != blank and section.settings.end_time != blank %}
+                  <div id="{{ block.id }}" class="landing-hero__times-wrap hero-block" data-end-date="{{ section.settings.end_date | escape }}" data-end-time="{{ section.settings.end_time | escape }}">
+                    <img src="{{ 'clock.svg' | asset_url }}" alt="Countdown clock icon" loading="lazy">
+                    <p>Ends in: <span class="countdown-text">02h 14m</span></p>
+                  </div>
+                {% endif %}
               {% when 'text' %}
-                <div class="hero-block hero-block__text" {{ block.shopify_attributes }}>
+                <div id="{{ block.id }}" class="hero-block hero-block__text" {{ block.shopify_attributes }}>
                   {{ block.settings.text }}
                 </div>
               
               {% when 'button' %}
                 {% if block.settings.button_label != blank and block.settings.button_link != blank %}
-                  <div class="hero-block hero-block__button-wrapper landing-hero__btn" {{ block.shopify_attributes }}>
+                  <div id="{{ block.id }}" class="hero-block hero-block__button-wrapper landing-hero__btn" {{ block.shopify_attributes }}>
                     <a class="button button--stroke btn btn-secondary btn-large" 
                     href="{{ block.settings.button_link | default: '#' }}" data-block="button">
                       <span class="button__flair"></span>
@@ -313,6 +359,71 @@
           "id": "image_max_width",
           "label": "Max width CSS",
           "info": "Optional: e.g., 500px, 50%, 80vw"
+        },{
+          "type": "select",
+          "id": "position_type",
+          "label": "Position type",
+          "options": [
+            {
+              "value": "relative",
+              "label": "Relative"
+            },
+            {
+              "value": "absolute",
+              "label": "Absolute"
+            }
+          ],
+          "default": "relative"
+        },{
+          "type": "select",
+          "id": "vertical_position",
+          "label": "Vertical position",
+          "options": [
+            {
+              "value": "top",
+              "label": "Top"
+            },
+            {
+              "value": "center",
+              "label": "Center"
+            },
+            {
+              "value": "bottom",
+              "label": "Bottom"
+            }
+          ],
+          "visible_if": "{{block.settings.position_type == 'absolute'}}"
+        },{
+          "type": "text",
+          "id": "vertical_position_value",
+          "label": "Vertical position value",
+          "info": "Vertical position value eg: 10px",
+          "visible_if": "{{block.settings.vertical_position != 'center'}}"
+        },{
+          "type": "select",
+          "id": "horizontal_position",
+          "label": "Horizontal position",
+          "options": [
+            {
+              "value": "left",
+              "label": "Left"
+            },
+            {
+              "value": "center",
+              "label": "Center"
+            },
+            {
+              "value": "right",
+              "label": "Right"
+            }
+          ]
+          
+        },{
+          "type": "text",
+          "id": "horizontal_position_value",
+          "label": "Horizontal position value",
+          "info": "Horizontal position value eg: 10px",
+          "visible_if": "{{block.settings.horizontal_position != 'center'}}"
         }
       ]
     },
