adding customizable hero

--- a/sections/black-hero.liquid
+++ b/sections/black-hero.liquid
@@ -10,6 +10,7 @@
 %}
 <style>
   #section-{{ section.id }} {
+    position: relative;
     padding:{{ padding_desktop }};
     background-color: {{ background_color }};
   }
